Fix shared property editors